# yui-agent

./: AGENTS.md  README.md  pyproject.toml  requirements.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-size-check.yml
docs/: e2e-test-runbook.md  rca-template.md
src/yui/: lambda_handler.py  lambda_handler_utils.py  slack_adapter.py
tests/: test_agentcore_sessions_spawn.py  test_aya_yui_integration.py  test_e2e_flows.py  test_guardrails_e2e.py  test_lambda_handler.py  test_slack_e2e.py
tests/fixtures/: README.md  __init__.py  mock_agentcore_ws.py
