[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yui-agent"
version = "0.1.0"
description = "結（Yui）: Lightweight AWS-optimized AI agent orchestrator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "m4minidesk-sys"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.35.0",
    "bedrock-agentcore>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "slack-sdk>=3.30.0",
    "slack-bolt>=1.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0",
    "faker>=40.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "mypy>=1.13",
    "websockets>=14.0",
    "aiohttp>=3.11",
]
meeting = [
    "mlx-whisper>=0.4",
    "sounddevice>=0.5",
    "numpy>=1.26",
]
ui = [
    "rumps>=0.4",
]
hotkey = [
    "pynput>=1.7",
]
workshop = [
    "playwright>=1.40",
]
all = [
    "yui-agent[meeting,ui,hotkey,workshop]",
]

[project.scripts]
yui = "yui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["yui*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:bedrock_agentcore",
    "ignore::PendingDeprecationWarning:bedrock_agentcore",
    "ignore::DeprecationWarning:pydantic",
]
# Issue #73: skip有効性の定義
# skip = "未検証" (not "成功"). skipは必ずreason付きで記録すること.
# skip率 >10%: conftest.pytest_terminal_summary で警告表示
markers = [
    "aws: marks tests as requiring AWS credentials and Bedrock access (deselect with '-m \"not aws\"')",
    "unit: Unit tests - test individual functions/classes in isolation",
    "component: Component tests - test API/module boundaries with mocked dependencies",
    "integration: Integration tests - test real external service interactions",
    "e2e: End-to-end tests - test complete user workflows",
    "security: Security tests - test injection, traversal, and attack scenarios",
    "no_autospec: Disable autospec enforcement for this test",
]
